syntax = "proto3";

option csharp_namespace = "BrassLoon.Interface.Authorization.Protos";

message GetByDomainRequest {
	string DomainId = 1;
}